code/Ben/k8s/test/mesh/virtual-service/api-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-virtual-service
  namespace: dev
spec:
  gateways:
    - ben-gateway
  hosts:
    - api.lomofu.com
  http:
    - route:
        - destination:
            host: gateway
            port:
              number: 8080
            subset: v1
          weight: 100
