code/Ben/k8s/test/mesh/virtual-service/app-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtual-service
  namespace: dev
spec:
  gateways:
    - ben-gateway
  hosts:
    - app.lomofu.com
  http:
    - route:
        - destination:
            host: app
            port:
              number: 80
            subset: v1
          weight: 100
